--- a/elearn-app.html
+++ b/elearn-app.html
@@ -36,38 +36,40 @@
                   </div>
                </div>
                <div class="main-tag">
-                  <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
-                  <span class="role">Visual Design</span>
-                  <span class="role">Data Visualizaion</span>
-                  <span class="role">HTML/CSS</span> 
-                  <span class="role">Adobe CC</span>
-                  <span class="role">JavaScript</span>
-                  <span class="role">Design Systems</span> 
-                  <span class="role">React</span>
-                  <span class="role">Angular</span>
-                  <span class="role">Motion Design</span>
-                  <span class="role">Graphic Design</span> 
-                  <span class="role">Video Editing/Filming</span>
-                  <span class="role">UX Research</span>
-                  <span class="role">Agile</span>
-                  <span class="role">Marketing</span>
-                  <span class="role">Mobile Design</span>
-                  <span class="role">Web Design</span> 
-                  <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
-                  <span class="role">Sharepoint</span>
-                  <span class="role">Design Thinking</span>
-                  <span class="role">Lean UX</span> 
-                  <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
-                  <span class="role">Invision</span>
-                  <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-                  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
-                  <span class="role">Git</span>
+                <span class="role">Prototyping</span> 
+                <span class="role">Usability Testing</span>
+                <span class="role">Visual Design</span>
+                <span class="role">Data Visualizaion</span>
+                <span class="role">HTML/CSS</span> 
+                <span class="role">Adobe CC</span>
+                <span class="role">JavaScript</span>
+                <span class="role">Design Systems</span> 
+                <span class="role">React</span>
+                <span class="role">Angular</span>
+                <span class="role">Motion Design</span>
+                <span class="role">Graphic Design</span> 
+                <span class="role">Video Editing/Filming</span>
+                <span class="role">UX Research</span>
+                <span class="role">Agile</span>
+                <span class="role">Marketing</span>
+                <span class="role">Mobile Design</span>
+                <span class="role">Web Design</span> 
+                <span class="role">Multimedia</span>
+                <span class="role">Information Architecture</span>
+                <span class="role">UX Writing/Content Design</span>
+                <span class="role">Sharepoint</span>
+                <span class="role">Design Thinking</span>
+                <span class="role">Lean UX</span> 
+                <span class="role">Scrum</span>
+                <span class="role">Invision</span>
+                <span class="role">Communication</span>
+                <span class="role">Accessibility</span>
+                <span class="role">Sketch</span>
+                <span class="role">3D</span>
+                <span class="role">Figma</span>
+                <span class="role">Framer</span>
+                <span class="role">WCAG</span>
+                <span class="role">Git</span>
                </div>
             </div>
          </div>
@@ -76,10 +78,9 @@
                <div class="main-text-center">
                   <h1>ICTC e-Learning App UI</h1>
                   <p class="project-desc">
-                     My main focus at ICTC is to build internal design and UX practises and support internal and external facing products and applications. 
-                     As one of the main focuses of ICTC advancing Canada's digital economy, investment in education and access to education and tools plays 
-                     a key role in the organization's goals. As such, one of the main projects I was tasked with was designing a light e-Learning 
-                     application to address gaps in the market for newcomers.
+                     ICTC's goal is to advance Canada's digital economy. As such, educational initiatives, programs, and products play a crucial role
+                     in the organization's efforts. One of the main projects I was tasked with was designing an e-Learning application to address
+                     gaps in the market for Newcomers to Canada.
                   </p>
                   <br>
                   <div class="project-tag">
@@ -109,51 +110,57 @@
                         resulting from language barriers and access result in people across Canada being left out of accessing important resources.
                         <br>
                         <br>
-                        An E-Learning Application that allows users from across the country, with a specific focus on newcomers, minorities and people 
-                        with disabilities that provides access to people across Canada to learning opportunities.
+                        The goal was to build an E-Learning Application that allows users from across the country, with a specific focus on newcomers, 
+                        minorities and people with disabilities, access to learning opportunities.
+                        <br>
+                        <br>
+                        <b>
+                        Project Timeline:
+                        10 weeks
+                        </b>
                      </p>
                      <h2 class="project-subtitle">Design Process</h2>
                      <p class="project-copy"> 
                         <b>Discovery Phase</b> <br>
-                        We began with the discovery phase to establish the base for the project. This included stakeholder interviews, user interviews, 
+                        We began with the discovery phase to establish the foundation for the project. This included stakeholder interviews, user interviews, 
                         qualitative and quantitative analysis. It also included a broad competitive analysis.
                         <br>
                         <br>
                         <b><i>Competitive Analysis</i></b> <br>
-                        We conducted a light analysis of competitors and services providers who operate in the space, though typically with different 
+                        We conducted a light analysis of competitors and service providers who operate in the space, though typically with different 
                         objectives and goals. This provided important insights and illuminated our potential direction.
                      </p>
                      <img src="assets/images/e-Learning App/Competitive Analysis_eLearningApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Define Phase</b> <br>
-                        After discovery, we defined our results and leveraged stakeholder input. Our define phase included the 
-                        creation of user personas, empathy mapping and user journey maps.
+                        After discovery, we analyzed our results and leveraged stakeholder input. Our define phase included the 
+                        creation of user personas, empathy maps and user journey maps.
                         <br>
                         <br>
                         <b><i>User Personas:</i></b> <br>
-                        Two user personas were created based on the research gathered during our discovery phase. The characters, though fictional, provide great 
-                        content for our architecture, design and overthinking.
+                        Multiple user personas were created based on the research gathered during our discovery phase. The characters, though fictional, provide great 
+                        insight into our architecture, design and overall thinking.
                      </p>
                      <img src="assets/images/e-Learning App/User Persona_eLearningApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Ideation Phase</b> <br>
                         Our focus during the ideation phase was to test and realize the results of the discovery and define phases. We leveraged 
-                        many problem-solving techniques and worked on Card Sorting, Information Architecture, and workshopping ideas.
+                        many problem-solving techniques and worked on card sorting, information architecture, and workshopping ideas.
                         <br>
                         <br>
                         <b><i>Information Architecture:</i></b> <br>
-                        Due to time constraints, we didn’t have the ideal amount of time for IA, but our goal was to leverage the time we did have 
+                        Due to time constraints, we didn’t have the ideal amount of time for building the IA, but our goal was to leverage the time we did have 
                         to build a minimal and simple IA.
                      </p>
                      <img src="assets/images/e-Learning App/IA_eLearningApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Design Phase</b> <br>
-                        After the crucial research, stakeholder input and findings, we began the design phase with rough sketches of the application. 
-                        The design phase also included Wireframes, building a Light Design System and iteratively improved prototypes.
+                        After crucial research, stakeholder input and other findings, we began the design phase with rough sketches of the application. 
+                        The design phase also included wireframes, building a light design system and prototypes.
                         <br>
                         <br>
                         <b><i>Medium Fidelity Prototypes:</i></b> <br>
-                        We finally built mockups based on the insights from previous steps and research. This was an iterative process. The goal 
+                        We built mockups based on the insights from previous steps and research. This was an iterative process. The goal 
                         was simplicity and accessibility and we made the effort to reflect that in our final design. The following are excerpts 
                         of the medium-fidelity designs:
                      </p>
@@ -162,7 +169,7 @@
                         <b>Testing and Development Handoff</b> <br>
                         We were able to get feedback from a plurality of users using an interactive version of our prototype we built using HTML, 
                         CSS, and JavaScript on a staging server. This allowed us to get tangible feedback on what worked and what didn’t. We were 
-                        able to leverage our technical skillset to work with the development team to make the handoff smooth, efficient and productive.
+                        able to leverage our technical skills to work with the development team to make the handoff smooth, efficient and productive.
                      </p>
                      <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:b785ed02-3281-496b-bd90-499fd996fb15" target="_blank" class="view-btn">View Project</a>
