--- a/insurance-app.html
+++ b/insurance-app.html
@@ -36,38 +36,40 @@
                   </div>
                </div>
                <div class="main-tag">
-                  <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
-                  <span class="role">Visual Design</span>
-                  <span class="role">Data Visualizaion</span>
-                  <span class="role">HTML/CSS</span> 
-                  <span class="role">Adobe CC</span>
-                  <span class="role">JavaScript</span>
-                  <span class="role">Design Systems</span> 
-                  <span class="role">React</span>
-                  <span class="role">Angular</span>
-                  <span class="role">Motion Design</span>
-                  <span class="role">Graphic Design</span> 
-                  <span class="role">Video Editing/Filming</span>
-                  <span class="role">UX Research</span>
-                  <span class="role">Agile</span>
-                  <span class="role">Marketing</span>
-                  <span class="role">Mobile Design</span>
-                  <span class="role">Web Design</span> 
-                  <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
-                  <span class="role">Sharepoint</span>
-                  <span class="role">Design Thinking</span>
-                  <span class="role">Lean UX</span> 
-                  <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
-                  <span class="role">Invision</span>
-                  <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-				  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
-                  <span class="role">Git</span>
+				<span class="role">Prototyping</span> 
+				<span class="role">Usability Testing</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Data Visualizaion</span>
+				<span class="role">HTML/CSS</span> 
+				<span class="role">Adobe CC</span>
+				<span class="role">JavaScript</span>
+				<span class="role">Design Systems</span> 
+				<span class="role">React</span>
+				<span class="role">Angular</span>
+				<span class="role">Motion Design</span>
+				<span class="role">Graphic Design</span> 
+				<span class="role">Video Editing/Filming</span>
+				<span class="role">UX Research</span>
+				<span class="role">Agile</span>
+				<span class="role">Marketing</span>
+				<span class="role">Mobile Design</span>
+				<span class="role">Web Design</span> 
+				<span class="role">Multimedia</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UX Writing/Content Design</span>
+				<span class="role">Sharepoint</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Lean UX</span> 
+				<span class="role">Scrum</span>
+				<span class="role">Invision</span>
+				<span class="role">Communication</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Sketch</span>
+				<span class="role">3D</span>
+				<span class="role">Figma</span>
+				<span class="role">Framer</span>
+				<span class="role">WCAG</span>
+				<span class="role">Git</span>
                </div>
             </div>
          </div>
@@ -76,9 +78,9 @@
                <div class="main-text-center">
                   <h1>Sym-Tech DAVE 2.0 UI</h1>
                   <p class="project-desc">
-                     As UX Lead at Sym-Tech, I juggled many exciting responsibilities. In addition to overseeing the entire Design Thinking/UX 
-                     Process, I was responsible for assisting the development team in implementing designs and helping build, test and ship digital 
-                     products leveraging both an agile and lean methodological approach.
+                     As Product Design & Design Technology Lead at Sym-Tech, I juggled many exciting responsibilities. In addition to overseeing the 
+					 entire design thinking/ux process, I was responsible for assisting the development team in implementing designs and helping build, 
+					 test and ship digital products, leveraging both an agile and lean methodological approach.
                   </p>
                   <br>
                   <div class="project-tag">
@@ -105,57 +107,58 @@
                      <p class="project-text">
                         DAVE is a legacy warranty and insurance application. It allows dealers and its users to buy and sell warranty 
                         products. Though DAVE was a stable product for many years, it began to lose its market edge. The goal of this 
-                        project was to not just redesign the parts that work but to reimagine the product as a whole and create anew.
+                        project was to not just redesign the parts that work but to reimagine the product as a whole.
                         <br>
                         <br>
-                        At Sam-Tech I was tasked to build native UX practises, lead workshops, gather requirements, build scalable design systems. 
-                        I had the opportunity to leverage my development skills making design handoffs efficient. I lead a small team of designers, 
+                        At Sam-Tech, I was tasked to build native ux practises, lead workshops, gather requirements, build a scalable design system, and 
+                        more. I had the opportunity to leverage my development skills making design handoffs efficient. I lead a small team of designers, 
                         researchers and technologists setting goals and through collaboration, reaching them.
                         <br>
                         <br>
                         This particular project was a key deliverable during my time at Sym-Tech. It's a Warranty and Insurance Sales Application 
-                        designed for several corporate users, including VW and Audi Canada. The project timeline was short, roughly 9 months, not 
-                        just for design and development, but rather the goal for production release, so the design process was limited and required 
-                        creativity to work around an 8 - 12 week time frame. But we did and it was a satisfying success!
+                        designed for several corporate users, including VW and Audi Canada. The project timeline was short, roughly 9 months to 
+						design, develop, test, and ultimately release to production. So the design process was limited and required creativity to 
+						work around an 8 - 12 week time frame. But we did and it was a satisfying success!
                      </p>
                      <h2 class="project-subtitle">My Role</h2>
                      <p class="project-copy">
-                        My role was to lead the design and handoff of the application. This included the following:
+                        My role was to gather requirements, lead the design, and collaborate with developers, product managers and more. This included the
+						following:
                      </p>
                      <p class="project-copy"> 
                         <b>Understanding & Requirments' Gathering</b> <br>
-                        Worked with key stakeholders to document business requirement documents, define use cases, and create user personas. 
-                        This is also a great opportunity to build expectations with the teams, as this was an interdisciplinary project.
+                        Worked with key stakeholders to document business requirements, define use cases, and create user personas. 
                      </p>
                      <p class="project-copy"> 
                         <b>Design Thinking & Research</b> <br>
-                        We conducted a detailed analysis of competitors and similar applications and built user guidelines. When problems would 
-                        arise, as they typically do, I used a lean design thinking methodology.
+						Design thinking played a crucial role in this project, especially in problem-solving. When problems would arise, as they 
+						typically do, we used design thinking to empathize, define the problem, and more – to come to effective solutions. Usability
+						testing techniques like card sorting and other research methods like user interviews were crucial in providing context and
+						insight.
                      </p>
                      <p class="project-copy"> 
-                        <b>Visual Design & Prototyping & Usability Testing</b> <br>
-                        With the help of design thinking, we brainstormed and gathered ideas, built skeleton wireframes, evaluated and analyzed. 
-                        We built a scalable design system, through an iterative process hifi prototypes and built UX guidelines. We also leveraged 
-                        several usability testing techniques like card sorting to prioritize features.
+                        <b>Visual Design & Prototyping</b> <br>
+                        Built/created a new visual identity, scalable design system, hifi prototypes (through an iterative process) and more. 
                      </p>
                      <p class="project-copy"> 
-                        <b>implement</b> <br>
-                        We assisted the Front-end team in developing the UI. The main task/goal was to build a scalable and reusable component 
-                        library using React, JavaScript and HTTML/CSS.
+                        <b>Implementation</b> <br>
+                        Assisted the development team in developing the UI. The main task/goal was to build a scalable and reusable component 
+                        library using React, JavaScript and HTML/CSS.
                      </p>
                      <p class="project-copy"> 
                         <b>Evaluate</b> <br>
-                        We received feedback by conducting surveys and acceptance tests followed by evaluating the feedback.
+                        Received feedback from select users and evaluated the results.
                      </p>
                      <h2 class="project-subtitle">Design Process</h2>
                      <p class="project-copy"> 
                         <b>Discovery Phase</b> <br>
-                        The discovery phase included User interviews, gathering business requirements, and competitor analysis.
+                        The discovery phase included user interviews, gathering business requirements, and competitor analysis.
                         <br>
                         <br>
                         <b><i>Competitive Analysis</i></b> <br>
-                        We analyzed our competitors and break down their strengths and weaknesses to reveal potential opportunities. We looked 
-                        at the closest competitors, providing similar products and services, at a similar scale.
+                        We looked 
+                        at the closest competitors, providing similar products and services, at a similar scale. We analyzed our competitors to 
+						break down their strengths and weaknesses to reveal potential opportunities. 
                      </p>
                      <img src="assets/images/DAVE 2.0/CompetitiveAnalysis - DAVE.jpg" width="100%" alt="">
                      <p class="project-copy"> 
@@ -176,7 +179,10 @@
                         <br>
                         <b><i>User Flow:</i></b> <br>
                         After resolving early problems and constraints, we narrowed down our users and their needs and followed this by plotting 
-                        out the user flow. Here is one scenario: User's first day at a Volkswagen Dealership and they begin their onboarding process.
+                        out the user flow. Here is one scenario: 
+						<br>
+						<br>
+						User's first day at a Volkswagen Dealership and they begin their onboarding process.
                      </p>
                      <img src="assets/images/DAVE 2.0/User Flow - DAVE.jpg" width="100%" alt="">
                      <p class="project-copy"> 
@@ -186,23 +192,18 @@
                         <br>
                         <br>
                         <b><i>Medium Fidelity Prototypes:</i></b> <br>
-                        After wireframes were reviewed and approved we began designing the prototypes. We used Adobe XD, here are some of the 
+                        After wireframes were reviewed and approved we began designing the prototypes using Adobe XD. Here are some of the 
                         medium-fidelity screens:
                      </p>
                      <img src="assets/images/DAVE 2.0/DAVE_Main.jpg" width="100%" alt="">
                      <p class="project-copy"> 
-                        <b>Testing and Development Handoff</b> <br>
+                        <b>Testing & Development Handoff</b> <br>
                         The project didn’t have a large UI development team, and as such, I was able to leverage my skills to support and collaborate with the 
-                        UI developers in reaching development and production targets. One of the key goals was to build a scalable UI component library using 
-                        React and other tools.
-                        <br>
-                        <br>
-                        The project didn’t have a large UI development team, and as such, I was able to leverage my skills to support and collaborate with 
-                        the UI developers in reaching development and production targets. My contrubutions included building a scalable UI component library 
+                        UI developers in reaching development and production targets. My contributions included building a scalable UI component library 
 						using React, HTML, CSS, and more.
                         <br>
                         <br>
-                        Accessibility played a major role in our design process and in development we used WAVE to evaluate our output. 
+                        Accessibility played a major role in our design process, and in development, we used WAVE to evaluate our output. 
                      </p>
                      <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:717cc642-3d89-4a79-8741-49910881dae7" target="_blank" class="view-btn">View Project</a>
