--- a/jobsite-app.html
+++ b/jobsite-app.html
@@ -36,38 +36,40 @@
                   </div>
                </div>
                <div class="main-tag">
-                  <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
-                  <span class="role">Visual Design</span>
-                  <span class="role">Data Visualizaion</span>
-                  <span class="role">HTML/CSS</span> 
-                  <span class="role">Adobe CC</span>
-                  <span class="role">JavaScript</span>
-                  <span class="role">Design Systems</span> 
-                  <span class="role">React</span>
-                  <span class="role">Angular</span>
-                  <span class="role">Motion Design</span>
-                  <span class="role">Graphic Design</span> 
-                  <span class="role">Video Editing/Filming</span>
-                  <span class="role">UX Research</span>
-                  <span class="role">Agile</span>
-                  <span class="role">Marketing</span>
-                  <span class="role">Mobile Design</span>
-                  <span class="role">Web Design</span> 
-                  <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
-                  <span class="role">Sharepoint</span>
-                  <span class="role">Design Thinking</span>
-                  <span class="role">Lean UX</span> 
-                  <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
-                  <span class="role">Invision</span>
-                  <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-                  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
-                  <span class="role">Git</span>
+                <span class="role">Prototyping</span> 
+                <span class="role">Usability Testing</span>
+                <span class="role">Visual Design</span>
+                <span class="role">Data Visualizaion</span>
+                <span class="role">HTML/CSS</span> 
+                <span class="role">Adobe CC</span>
+                <span class="role">JavaScript</span>
+                <span class="role">Design Systems</span> 
+                <span class="role">React</span>
+                <span class="role">Angular</span>
+                <span class="role">Motion Design</span>
+                <span class="role">Graphic Design</span> 
+                <span class="role">Video Editing/Filming</span>
+                <span class="role">UX Research</span>
+                <span class="role">Agile</span>
+                <span class="role">Marketing</span>
+                <span class="role">Mobile Design</span>
+                <span class="role">Web Design</span> 
+                <span class="role">Multimedia</span>
+                <span class="role">Information Architecture</span>
+                <span class="role">UX Writing/Content Design</span>
+                <span class="role">Sharepoint</span>
+                <span class="role">Design Thinking</span>
+                <span class="role">Lean UX</span> 
+                <span class="role">Scrum</span>
+                <span class="role">Invision</span>
+                <span class="role">Communication</span>
+                <span class="role">Accessibility</span>
+                <span class="role">Sketch</span>
+                <span class="role">3D</span>
+                <span class="role">Figma</span>
+                <span class="role">Framer</span>
+                <span class="role">WCAG</span>
+                <span class="role">Git</span>
                </div>
             </div>
          </div>
@@ -76,9 +78,8 @@
                <div class="main-text-center">
                   <h1>ICTC Jobsite App UI</h1>
                   <p class="project-desc">
-                     My main focus at ICTC is to build internal design and UX practises and support internal and external facing products and 
-                     applications. One of the key projects I was tasked with leading was the designing of a niche/specialized Job and HR 
-                     application to serve under-served citizens across Canada.
+                     At ICTC, one of the key projects I was tasked with leading was the designing of a niche/specialized Job and HR 
+                     application to support under-served citizens across Canada.
                   </p>
                   <br>
                   <div class="project-tag">
@@ -108,63 +109,68 @@
                         difficult and daunting can be finding work and building a career in their new home.
                         <br>
                         <br>
-                        ICTC Digital E-Learning Application is an e-learning app that provides users with a digital learning outlet for 
-                        newcomers to Canada and those for whom English and French are a second language.
+                        ICTC's Digital E-Learning Application is an e-learning app that provides accessibile education resources for newcomers to
+                        Canada and those for whom English and French are a second language.
+                        <br>
+                        <br>
+                        <b>
+                        Project Timeline:
+                        12 weeks
+                        </b>
                      </p>
                      <h2 class="project-subtitle">Design Process</h2>
                      <p class="project-copy"> 
                         <b>Discovery Phase</b> <br>
-                        The first main phase of our design process was the discovery phase and it included User Interviews and Surveys. 
-                        It also included Competitive Analysis.
+                        The first main phase of our design process was the discovery phase and it included user interviews and surveys. 
+                        It also included competitive analysis.
                         <br>
                         <br>
                         <b><i>Competitive Analysis</i></b> <br>
                         We reviewed similar products with similar features that provide similar services. Though the products are not necessarily 
-                        the same, this was a great opportunity to scope the landscape to observe opportunities.
+                        the same, this was a great opportunity to scope the landscape to find opportunities.
                      </p>
                      <img src="assets/images/Job App/Competitive Analysis_JobApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Define Phase</b> <br>
-                        Following discovery, we began to define. In the Define phase, we created user personas and used empathy mapping techniques 
-                        and User journey Mapping.
+                        Following discovery, we began to define. In the define phase, we created user personas, empathy maps, and user journey maps.
                         <br>
                         <br>
                         <b><i>Empathy Mapping:</i></b> <br>
-                        To get a deeper sense of what we know about the particular types of users we targeted. This aided us in decision-making and helped 
-                        us better understand our users' needs and potential pain points.
+                        We created empathy maps to get a deeper sense of what we knew about the particular types of users we were targeting. This aided us in decision-making
+                        and helped us better understand our user's needs and potential pain points.
                      </p>
                      <img src="assets/images/Job App/Empathy Map_JobApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Ideation Phase</b> <br>
                         The ideation phase was crucial in outlining the application, and structuring the results from the discovery and define phases. During 
-                        the ideation phase we collaborated on Card Sorting, problem solved using How Might We statements and built the foundational information 
+                        this phase we collaborated on card sorting, problem solved using how might we statements and built the foundational information 
                         architecture of the application. 
                         <br>
                         <br>
                         <b><i>Card Sorting:</i></b> <br>
-                        We conducted remote card sorting using Miro. It was certainly an environmental change, but a great experience and productive result as usual. This 
-                        created a great foundation for building our information architecture and logical navigation.
+                        We conducted remote card sorting using Miro. It was certainly an environmental change, but a great experience and productive result nonetheless. This 
+                        created a great foundation for building our information architecture and navigation.
                      </p>
                      <img src="assets/images/Job App/Card Sorting_JobApp.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Design Phase</b> <br>
-                        The design phase was crucial in laying out and materializing the solutions and outcomes of all previous steps. It included rough sketches, wireframes 
-                        and prototypes. This phase, like all others, was iterative and extremely collaborative, with input coming from members of all teams involved in the 
-                        project. We began with low-fidelity mockups and ultimately iterated to High fidelity prototypes. 
+                        The design phase was crucial in laying out the solutions and outcomes of all previous steps. It included rough sketches, wireframes 
+                        and prototypes. This phase, like all others, was iterative and extremely collaborative, with input coming from members of all teams involved 
+                        in the project. We began prototyping with low-fidelity mockups and ultimately iterated to high-fidelity prototypes. 
                         <br>
                         <br>
                         <b><i>Medium Fidelity Prototypes:</i></b> <br>
-                        After the sketches, wireframes, research and all other inputs/analysis, we were well-positioned to design the UI and prototype the solutions. 
+                        After sketches, wireframes and all other inputs/analyses, we were well-positioned to design the UI and prototype the solutions. 
                         We used Adobe XD and its collaboration tools to get immediate feedback.
                      </p>
                      <img src="assets/images/Job App/ICTCJobsite_Main.jpg" width="100%" alt="">
                      <p class="project-copy"> 
                         <b>Testing and Development Handoff</b> <br>
-                        The testing phase is broad and includes Accessibility Testing, User Acceptance testing during the development process and User Feedback.
+                        The testing phase was broad and included accessibility testing, user acceptance testing during the development process and analysing user feedback.
                         <br>
                         <br>
                         We built a more interactive version of the prototype using HTML, CSS, and JavaScript. This version was used for testing, to collaborate 
-                        with the development team and to get user feedback.
+                        with the development team and to get user feedback. Also, building the interactive version made the design handoff to the development team easier.
                      </p>
                      <div class="view-next-btn-wtapper">
                         <a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:2db4060f-207d-4666-b52f-25d37c063980" target="_blank" class="view-btn">View Project</a>
