--- a/network-app.html
+++ b/network-app.html
@@ -36,38 +36,40 @@
                   </div>
                </div>
                <div class="main-tag">
-                  <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
-                  <span class="role">Visual Design</span>
-                  <span class="role">Data Visualizaion</span>
-                  <span class="role">HTML/CSS</span> 
-                  <span class="role">Adobe CC</span>
-                  <span class="role">JavaScript</span>
-                  <span class="role">Design Systems</span> 
-                  <span class="role">React</span>
-                  <span class="role">Angular</span>
-                  <span class="role">Motion Design</span>
-                  <span class="role">Graphic Design</span> 
-                  <span class="role">Video Editing/Filming</span>
-                  <span class="role">UX Research</span>
-                  <span class="role">Agile</span>
-                  <span class="role">Marketing</span>
-                  <span class="role">Mobile Design</span>
-                  <span class="role">Web Design</span> 
-                  <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
-                  <span class="role">Sharepoint</span>
-                  <span class="role">Design Thinking</span>
-                  <span class="role">Lean UX</span> 
-                  <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
-                  <span class="role">Invision</span>
-                  <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-				  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
-                  <span class="role">Git</span>
+				<span class="role">Prototyping</span> 
+				<span class="role">Usability Testing</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Data Visualizaion</span>
+				<span class="role">HTML/CSS</span> 
+				<span class="role">Adobe CC</span>
+				<span class="role">JavaScript</span>
+				<span class="role">Design Systems</span> 
+				<span class="role">React</span>
+				<span class="role">Angular</span>
+				<span class="role">Motion Design</span>
+				<span class="role">Graphic Design</span> 
+				<span class="role">Video Editing/Filming</span>
+				<span class="role">UX Research</span>
+				<span class="role">Agile</span>
+				<span class="role">Marketing</span>
+				<span class="role">Mobile Design</span>
+				<span class="role">Web Design</span> 
+				<span class="role">Multimedia</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UX Writing/Content Design</span>
+				<span class="role">Sharepoint</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Lean UX</span> 
+				<span class="role">Scrum</span>
+				<span class="role">Invision</span>
+				<span class="role">Communication</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Sketch</span>
+				<span class="role">3D</span>
+				<span class="role">Figma</span>
+				<span class="role">Framer</span>
+				<span class="role">WCAG</span>
+				<span class="role">Git</span>
                </div>
             </div>
          </div>
@@ -77,8 +79,8 @@
                   <h1>Bell Network App UI</h1>
                   <p class="project-desc">
                      I often do freelance projects and contracts that allow me to learn new things and exercise my skills in different ways, 
-                     and I had this opportunity to work with Bell Communications internal Network and Data Analytics team to help design a 
-                     new network status application with a more modern and adaptable design.
+                     and I had this opportunity to work with Bell Communications' internal Network and Data Analytics team to help design a 
+                     new network status application with a modern design.
                   </p>
                   <br>
                   <div class="project-tag">
@@ -102,8 +104,8 @@
                   <div class="project-wrapper">
                      <h2 class="project-subtitle">Project Overview</h2>
                      <p class="project-text">
-                        The project was set and budgeted for 6 - 12 weeks, including development and production. However, through creative 
-                        problem solving and leveraging a lean approach, it was completed in 10 weeks, with no compromise in quality.
+                        The project was set and budgeted for 6 - 12 weeks, including development. However, through creative problem solving
+                        it was completed in 8 weeks, with no compromise in quality.
                         <br>
                         <br>
                         <b>
@@ -111,8 +113,9 @@
                         6 - 12 weeks
                         </b>
                      </p>
-                     <h2 class="project-subtitle">My Role</h2>
+                     <h2 class="project-subtitle">Highlights & Summary</h2>
                      <p class="project-copy">
+						<b>Goal</b> <br>
                         The goal was to build a new network status application to make it easier for stakeholders to check network data points. 
                         I designed the following tools and features from scratch:
                      </p>
@@ -127,9 +130,9 @@
                      </p>
                      <p class="project-copy"> 
                         <b>Modern Design</b> <br>
-                        After some brainstorming and design thinking workshops, we decided on a modern minimalist design with some influence from 
-                        material design. Typography and color were preset by corporate guidelines, but there was room for creativity with layout 
-                        and composition, however minimal it was!
+                        After some brainstorming and design thinking workshops, we used a modern-minimalist design with some influence from material 
+                        design. Typography and color were preset by corporate guidelines, but there was room for creativity with layout 
+                        and composition.
                      </p>
                      <img src="assets/images/BellNet_Main.jpg" width="100%" alt="">
                      <div class="view-next-btn-wtapper">
