--- a/remit-app.html
+++ b/remit-app.html
@@ -36,48 +36,50 @@
                   </div>
                </div>
                <div class="main-tag">
-                  <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
-                  <span class="role">Visual Design</span>
-                  <span class="role">Data Visualizaion</span>
-                  <span class="role">HTML/CSS</span> 
-                  <span class="role">Adobe CC</span>
-                  <span class="role">JavaScript</span>
-                  <span class="role">Design Systems</span> 
-                  <span class="role">React</span>
-                  <span class="role">Angular</span>
-                  <span class="role">Motion Design</span>
-                  <span class="role">Graphic Design</span> 
-                  <span class="role">Video Editing/Filming</span>
-                  <span class="role">UX Research</span>
-                  <span class="role">Agile</span>
-                  <span class="role">Marketing</span>
-                  <span class="role">Mobile Design</span>
-                  <span class="role">Web Design</span> 
-                  <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
-                  <span class="role">Sharepoint</span>
-                  <span class="role">Design Thinking</span>
-                  <span class="role">Lean UX</span> 
-                  <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
-                  <span class="role">Invision</span>
-                  <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-				  <span class="role">Framer</span>
-                  <span class="role">WCAG</span>
-                  <span class="role">Git</span>
+				<span class="role">Prototyping</span> 
+				<span class="role">Usability Testing</span>
+				<span class="role">Visual Design</span>
+				<span class="role">Data Visualizaion</span>
+				<span class="role">HTML/CSS</span> 
+				<span class="role">Adobe CC</span>
+				<span class="role">JavaScript</span>
+				<span class="role">Design Systems</span> 
+				<span class="role">React</span>
+				<span class="role">Angular</span>
+				<span class="role">Motion Design</span>
+				<span class="role">Graphic Design</span> 
+				<span class="role">Video Editing/Filming</span>
+				<span class="role">UX Research</span>
+				<span class="role">Agile</span>
+				<span class="role">Marketing</span>
+				<span class="role">Mobile Design</span>
+				<span class="role">Web Design</span> 
+				<span class="role">Multimedia</span>
+				<span class="role">Information Architecture</span>
+				<span class="role">UX Writing/Content Design</span>
+				<span class="role">Sharepoint</span>
+				<span class="role">Design Thinking</span>
+				<span class="role">Lean UX</span> 
+				<span class="role">Scrum</span>
+				<span class="role">Invision</span>
+				<span class="role">Communication</span>
+				<span class="role">Accessibility</span>
+				<span class="role">Sketch</span>
+				<span class="role">3D</span>
+				<span class="role">Figma</span>
+				<span class="role">Framer</span>
+				<span class="role">WCAG</span>
+				<span class="role">Git</span>
                </div>
             </div>
          </div>
          <div class="main">
             <div class="main-text">
                <div class="main-text-center">
-                  <h1>Juba Express Financial Remittance Mobile App</h1>
+                  <h1>Juba Express Remittance Mobile App</h1>
                   <p class="project-desc">
-                     I had the opportunity to work with a local Finacial and Remittance Services company and design a remittance application. 
-                     From discussion/conception to production, the project took 2 months to get off the ground to be fully functional.
+                     I had the opportunity to work with a local financial services company to design a mobile remittance application. 
+                     From discussion/conception to handoff, the project took 2 months.
                   </p>
                   <br>
                   <div class="project-tag">
@@ -98,32 +100,32 @@
                   <div class="project-wrapper">
                      <h2 class="project-subtitle">Project Overview</h2>
                      <p class="project-text">
-                        The goal for the organization in seeking a vendor to complete the design project was to design a modern mobile and 
-                        web application that supports the broad global userbase. Juba Express mainly serves users from Africa, Europe and 
-                        North America, and a user base ages between 18 - 75, so the goal was to redesign their mobile application to be not 
-                        only easy to use but specifically adaptable.
+                        The goal for the organization in seeking a vendor to complete the design project was to design a modern mobile application 
+						that supports their global userbase. Juba Express mainly serves customers in Africa, Europe and North America, between the ages of
+                        18 - 75. The objective was to design a mobile application that is easy to use and adaptable.
                         <br>
                         <br>
                         <b>
                         Project Timeline:
-                        12 - 16 weeks
+                        8 - 12 weeks
                         </b>
                      </p>
-                     <h2 class="project-subtitle">My Role</h2>
+                     <h2 class="project-subtitle">Highlights & Summary</h2>
                      <p class="project-copy">
-                        The goal was to build a new network status application to make it easier for stakeholders to check network data points. 
-                        The following were the key goals for the project:
+						<b>My Role</b> <br>
+                        As the Principal Designer on this project, I collaborated with the leadership of the organization to realize their
+						overall goals for the design of the application.
                      </p>
                      <p class="project-copy"> 
-                        <b>Language</b> <br>
-                        The users of this product are diverse and dozens of languages are represented. This presented some challenges, but through 
+                        <b>Challenges</b> <br>
+                        The users of this product are diverse with dozens of languages needing support. This presented some challenges, but through 
                         design thinking and user research we were able to find appropriate solutions.
                      </p>
                      <p class="project-copy"> 
                         <b>Design and Security</b> <br>
-                        Financial Services products and security go hand and hand. Security is more a measure than a feature, and this is certainly 
+                        For financial services products security is extremely important. Security is more a measure than a feature, and this is certainly 
                         the case from a design standpoint. I enacted and designed features like end-to-end encryption and two-factor authentication 
-                        to build trust which was only possible after understanding user needs.
+                        to build trust which was only possible after understanding the unique user needs.
                      </p>
                      <p class="project-copy"> 
                         <b>Accessibility</b> <br>
