--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                </div>
                <div class="main-tag">
                   <span class="role">Prototyping</span> 
-                  <span class="role">Information Architecture</span>
+				  <span class="role">Usability Testing</span>
                   <span class="role">Visual Design</span>
                   <span class="role">Data Visualizaion</span>
                   <span class="role">HTML/CSS</span> 
@@ -54,17 +54,19 @@
                   <span class="role">Mobile Design</span>
                   <span class="role">Web Design</span> 
                   <span class="role">Multimedia</span>
-                  <span class="role">Usability Testing</span>
-                  <span class="role">Communication</span>
+				  <span class="role">Information Architecture</span>
+				  <span class="role">UX Writing/Content Design</span>
                   <span class="role">Sharepoint</span>
                   <span class="role">Design Thinking</span>
                   <span class="role">Lean UX</span> 
                   <span class="role">Scrum</span>
-                  <span class="role">Accessibility</span>
                   <span class="role">Invision</span>
+				  <span class="role">Communication</span>
+                  <span class="role">Accessibility</span>
+				  <span class="role">Sketch</span>
+				  <span class="role">3D</span>
                   <span class="role">Figma</span>
-                  <span class="role">Sketch</span>
-		  <span class="role">Framer</span>
+				  <span class="role">Framer</span>
                   <span class="role">WCAG</span>
                   <span class="role">Git</span>
                </div>
@@ -78,10 +80,10 @@
                      I’m an experienced and passionate Product Designer and Design Technologist with over 8+ years of experience researching, ideating, 
                      and building digital products that achieve short and long-term business goals by collaborating with stakeholders to build/gather 
                      requirements and more. Over the years I’ve had the opportunity to work on several great products reflecting a variety of domains. 
-                     From enterprise insurance applications to internally facing cybersecurity apps, I’ve worked on a variety of dynamic products in 
+                     From enterprise insurance applications to internal facing cybersecurity apps, I’ve worked on a variety of dynamic products in 
                      agile and lean teams/environments. I leverage my engineering skills and understanding of JavaScript and popular libraries and 
                      frameworks like React, to build live/interactive prototypes and collaborate with development/engineering teams to design 
-                     functionality and problem solve issues.
+                     functionality and problem solve.
                   </p>
                </div>
             </div>
